force-app/main/default/objects/OTP__c/fields/Identifier_Type__c.field-meta.xml
<CustomField>
    <fullName>Identifier_Type__c</fullName>
    <label>Identifier Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>