force-app/main/default/objects/OTP__c/fields/Identifier_Value__c.field-meta.xml
<CustomField>
    <fullName>Identifier_Value__c</fullName>
    <label>Identifier Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>