force-app/main/default/objects/OTP__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CancellationPortal</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>