force-app/main/default/objects/OTP__c/fields/Resource_Key__c.field-meta.xml
<CustomField>
    <fullName>Resource_Key__c</fullName>
    <label>Resource Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>