force-app/main/default/objects/OTP__c/validationRules/Code_6_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Code_6_digits</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX(Code__c, &quot;^[0-9]{6}$&quot;) )</errorConditionFormula>
    <errorDisplayField>Code__c</errorDisplayField>
    <errorMessage>The code can maximum be 6 characters and must only use numbers.</errorMessage>
</ValidationRule>