force-app/main/default/objects/OTP__c/listViews/Email_One_Time_Passwords.listView-meta.xml
<ListView>
    <fullName>Email_One_Time_Passwords</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Channel__c</columns>
    <columns>Code__c</columns>
    <columns>Status__c</columns>
    <columns>Identifier_Type__c</columns>
    <columns>Identifier_Value__c</columns>
    <columns>Sent_At__c</columns>
    <columns>Verified_At__c</columns>
    <columns>Resource_Key__c</columns>
    <columns>Purpose__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Channel__c</field>
        <operation>equals</operation>
        <value>Email</value>
    </filters>
    <label>Email One-Time Passwords</label>
</ListView>