force-app/main/default/objects/OTP__c/listViews/Swedish_OTPs.listView-meta.xml
<ListView>
    <fullName>Swedish_OTPs</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Channel__c</columns>
    <columns>Code__c</columns>
    <columns>Status__c</columns>
    <columns>Identifier_Type__c</columns>
    <columns>Identifier_Value__c</columns>
    <columns>Sent_At__c</columns>
    <columns>Verified_At__c</columns>
    <columns>Resource_Key__c</columns>
    <columns>Purpose__c</columns>
    <columns>Key__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>se</value>
    </filters>
    <label>Swedish OTPs</label>
</ListView>